added data review v1

--- a/frontend/components/patternRecognition/actionSelector.html
+++ b/frontend/components/patternRecognition/actionSelector.html
@@ -1,3 +1,4 @@
+<body>
 <style>
   .action-list-item {
     display: flex;
@@ -17,7 +18,9 @@
     width: 80px;
   }
 </style>
+
 <script>
+/*
   function handleRepsChange(actionKey, actionName) {
     const reps = parseInt(
       document.getElementById(`action-reps-${actionKey}`).value
@@ -103,7 +106,7 @@
         `);
         });
       });
-  });
+  });*/
 </script>
 <ul class="list-group" id="list" style="max-height: 40vh; overflow-y: scroll">
   <li class="list-group-item">
@@ -119,3 +122,5 @@
     </div>
   </li>
 </ul>
+<script src="../../../frontend/javascript/actionSelector.js"></script>
+</body>
